--- a/style.css
+++ b/style.css
@@ -23,6 +23,19 @@ body {
   padding-right: 20px;
 }
 
+h1 {
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 36px;
+}
+
+h2 {
+  margin-left: 12rem;
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 28px;
+}
+
 header {
   text-align: center;
   padding: 20px;
@@ -42,13 +55,13 @@ header {
   padding: 30px 40px;
 }
 
-.card-header::after {
+/* .card-header::after {
   content: " ";
   display: block;
   width: 100%;
   background: #e7e9eb;
   height: 2px;
-}
+} */
 
 .card-body {
   min-height: 100px;
@@ -72,9 +85,13 @@ header {
   clear: both;
 }
 
+.checkbox {
+  width: 50%;
+}
+
 .btn {
   border: none;
-  background-color: hsl(360, 91%, 36%);
+  background-color: blue;
   border-radius: 25px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
     0px;
@@ -82,7 +99,7 @@ header {
   display: inline-block;
   font-size: 22px;
   line-height: 22px;
-  margin: 16px 16px 16px 20px;
+  margin: 16px 0px 50px 36rem;
   padding: 14px 34px;
   text-align: center;
   cursor: pointer;
