Make changes to face of page.

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body,
 
 body {
   font-family: sans-serif;
-  background-color: #f9fbfd;
+  background-color: #acffa9;
 }
 
 .wrapper {
@@ -54,14 +54,6 @@ header {
   max-width: 800px;
   padding: 30px 40px;
 }
-
-/* .card-header::after {
-  content: " ";
-  display: block;
-  width: 100%;
-  background: #e7e9eb;
-  height: 2px;
-} */
 
 .card-body {
   min-height: 100px;
